Update and rename docs.yml to docs-anonymize.yml and change path on target server

--- a/.github/workflows/docs-anonymize.yml
+++ b/.github/workflows/docs-anonymize.yml
@@ -38,4 +38,4 @@ jobs:
         user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         localDir: "docs"
-        remoteDir: "/anonymization"  
+        remoteDir: "/anonymization/anonymize"  
